# vulkan_practice

./: .gitignore  CMakeLists.txt  README.md  compile.sh
shaders/: cubemapShader.frag  cubemapShader.vert  defaultShader.frag  defaultShader.vert  shader.frag  shader.vert  texturedShader.frag  texturedShader.vert  vert.spv
shaders/spv/: cubemapFrag.spv  cubemapVert.spv  defaultVert.spv  texturedFrag.spv  texturedVert.spv
src/: main.cpp  triangleCamera.cpp  triangleCamera.hpp  triangleDescriptor.cpp  triangleDescriptor.hpp  triangleDevice.cpp  triangleDevice.hpp  triangleECS.cpp  triangleECS.hpp  triangleEngine.cpp  triangleEngine.hpp  triangleModel.cpp  triangleModel.hpp  trianglePipeline.cpp  trianglePipeline.hpp  triangleRenderer.cpp  triangleRenderer.hpp  triangleSwapchain.cpp  triangleSwapchain.hpp  triangleTypes.hpp  triangleUI.cpp  triangleUI.hpp  triangleWindow.cpp  triangleWindow.hpp
src/file_loader/: triangleGLTFLoader.cpp  triangleGLTFLoader.hpp
